# YandexMapsReviewsParser

./: .gitignore  main.py  pyproject.toml  run.py
docs/: analysis.md
parser/: classes.py  main.py
tests/: conftest.py  test_parser.py  test_review.py
